syntax = "proto3";

import "google/protobuf/any.proto";
option java_multiple_files = true;

package com.prateek.common.message.protobuf;

message AnyMessage {
    string message = 1;
    google.protobuf.Any padsrecord = 2;
}
